# SimpleAndroidVKNativeApp

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VulkanApp.cpp  VulkanApp.h  logger.h  main.cpp
gradle/wrapper/: gradle-wrapper.properties
